@@ -219,7 +219,7 @@ veris(operator.isSequenceType(0), False)
 veris(operator.isSequenceType([]), True)
 veris(operator.contains([], 1), False)
 veris(operator.contains([1], 1), True)
-veris(operator.isMappingType([]), False)
+veris(operator.isMappingType(1), False)
 veris(operator.isMappingType({}), True)
 veris(operator.lt(0, 0), False)
 veris(operator.lt(0, 1), True)
